--- a/blueberry/src/main/webapp/resources/bootstrap/theme/blog.css
+++ b/blueberry/src/main/webapp/resources/bootstrap/theme/blog.css
@@ -3,7 +3,7 @@
  */
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Nanum Gothic", Georgia, "Times New Roman", Times, serif;
   color: #555;
 }
 
@@ -14,7 +14,7 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
   margin-top: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Nanum Gothic", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #333;
 }
@@ -39,14 +39,14 @@ h6, .h6 {
   background-color: #428bca;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-}
+} 
 
 /* Nav links */
 .blog-nav-item {
   position: relative;
   display: inline-block;
   padding: 10px;
-  font-weight: 500;
+  font-weight: bold;
   color: #cdddeb;
 }
 .blog-nav-item:hover,
@@ -56,10 +56,10 @@ h6, .h6 {
 }
 
 /* Active state gets a caret at the bottom */
-.blog-nav .active {
+/* .blog-nav .active {
   color: #fff;
-}
-.blog-nav .active:after {
+} */
+/* .blog-nav .active:after {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -71,7 +71,7 @@ h6, .h6 {
   border-right: 5px solid transparent;
   border-bottom: 5px solid;
   border-left: 5px solid transparent;
-}
+} */
 
 
 /*
@@ -163,4 +163,11 @@ h6, .h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+
+.category-title-gap .name {
+	padding-left: 0px;
+}
+.category-title-gap .category {
+	padding-right: 5px;
 }
